<resources>
    <string name="donate_avail_title" formatted="false">Available Donors</string>
    <string name="text_button6_text" formatted="false">Heart Palpitation</string>
    <string name="text_button1_text1" formatted="false">Health Centers</string>
    <string name="text_view20_text" formatted="false">014234068</string>
    <string name="text_button8_text" formatted="false">Nose Bleeding</string>
    <string name="text_button2_text" formatted="false">Broken Toe</string>
    <string name="text_button5_text1" formatted="false">Appointment</string>
    <string name="text_view4_text" formatted="false">101</string>
    <string name="text_button4_text1" formatted="false">Doctors</string>
    <string name="text_view13_text" formatted="false">Maiti Nepal</string>
    <string name="text_button8_text1" formatted="false">First Aid</string>
    <string name="text_button7_text1" formatted="false">Helpline</string>
    <string name="text_view12_text" formatted="false">014493684</string>
    <string name="text_button1_text" formatted="false">Abdominal Pain</string>
    <string name="text_view6_text" formatted="false">102</string>
    <string name="text_button2_text1" formatted="false">Blood Donation</string>
    <string name="text_view18_text" formatted="false">015521333</string>
    <string name="text_view9_text" formatted="false">Child Helpline Nepal (Free)</string>
    <string name="text_button3_text" formatted="false">Cuts and Wounds</string>
    <string name="text_button7_text" formatted="false">Insect Bite</string>
    <string name="text_button9_text" formatted="false">Sunburn</string>
    <string name="text_button4_text" formatted="false">Dizziness</string>
    <string name="text_button5_text" formatted="false">Food Poisoning</string>
    <string name="text_view16_text" formatted="false">014225344</string>
    <string name="text_view15_text" formatted="false">Nepal Blood Bank</string>
    <string name="text_view17_text" formatted="false">Patan Mental Hospital</string>
    <string name="text_view10_text" formatted="false">1098</string>
    <string name="text_view2_text" formatted="false">100</string>
    <string name="text_button6_text1" formatted="false">Reminder</string>
    <string name="text_view19_text" formatted="false">American Embassy</string>
    <string name="text_view3_text" formatted="false">Fire Brigade (Free)</string>
    <string name="text_view14_text" formatted="false">014492904</string>
    <string name="text_view1_text" formatted="false">Police Control Room (Free)</string>
    <string name="text_button26_text" formatted="false">Animal Bites</string>
    <string name="pending_pager_view_title" formatted="false">Pending</string>
    <string name="text_view8_text" formatted="false">103</string>
    <string name="text_view7_text" formatted="false">Traffic Police (Free)</string>
    <string name="donate_req_title" formatted="false">Donation Requests</string>
    <string name="app_name" formatted="false">Medistant</string>
    <string name="tagline" formatted="false">Powered by Academia</string>
    <string name="history_pager_view_title" formatted="false">History</string>
    <string name="text_view5_text" formatted="false">Ambulance (Free)</string>
    <string name="text_view11_text" formatted="false">Nepal Eye Bank</string>
    <string name="text_button3_text1" formatted="false">Chat</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">INFO</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">EMERGENCY</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">FORUM</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">HELP</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="settings">Settings</string>
    <string name="preference_notification_category">Notification Preferences</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_ongoing">Persistent</string>
    <string name="ongoing_detail">Prevent notification from being swiped away</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_detail">Add a snooze action to the notification</string>
    <string name="snooze_length">Snooze length</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_detail">Add a \"Mark as done\" action to the notification</string>
    <string name="nagging_reminder">Nagging reminder</string>
    <string name="nagging_detail">Continuously notify you of the current notification until it is dismissed</string>
    <string name="nagging_interval">Nagging interval</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_share">Share</string>
    <string name="delete_confirmation">Are you sure you want to delete this notification?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="save_menu">Save</string>
    <string name="time_now">Now</string>
    <string name="date_today">Today</string>
    <string name="times_shown">Shown %1$d out of %2$d times</string>
    <string name="times_shown_edit">Shown %1$d out of</string>
    <string name="forever">Forever</string>
    <string name="no_repeat">Does not repeat</string>
    <string name="times">times</string>
    <string name="repeat_notification">Number of times to repeat: </string>
    <string name="content_hint">Add notification content</string>
    <string name="select_icon">Select an icon</string>
    <string name="default_icon">Default icon</string>
    <string name="custom_icon">Custom icon</string>
    <string name="select_colour">Select a colour</string>
    <string name="default_colour">Default colour</string>
    <string name="repeats_on">Repeats on:</string>
    <string name="repeat_every">Repeat every</string>
    <string name="repeats_every">Repeats every: %1$d %2$s</string>
    <string name="no_active">No active notifications</string>
    <string name="no_inactive">No inactive notifications</string>
    <string name="toast_past_date">Cannot set initial date in the past</string>
    <string name="toast_higher_number">Repeat number must be higher</string>
    <string name="toast_title_empty">Title cannot be empty</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="add_reminder">Add reminder</string>
    <string-array name="repeat_array">
        <item>Does not repeat</item>
        <item>Every hour</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
        <item>Specific days of the week</item>
        <item>Advanced</item>
    </string-array>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Hello download and install Medistant App. It will be your Medical Assistant.</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Invitation to Medistant</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_maps_key">AIzaSyBsXe_RlXTOGQPckLkdli47hzsz0xuVoWE</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
</resources>